fix broken word wrap on review body

--- a/client/src/styles/RatingsReviews/ReviewEntry.css
+++ b/client/src/styles/RatingsReviews/ReviewEntry.css
@@ -25,10 +25,9 @@
 }
 
 .body {
-  /* display: inline-block; */
-  width: 100%;
   padding: 5px 0;
   word-wrap: break-word;
+  hyphens: auto;
 }
 
 .recommend {
